--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,4 @@
 
-
-body {
-
-  background-color: red;
-
-
-}
-
 .top .navigation {
     list-style: none;
     text-align: right;
@@ -127,4 +119,12 @@ body {
     text-align: center;
     height:100%;
     width: 100%
+}
+
+
+body {
+
+  background-color: #212529;
+
+
 }
